--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-streamlit
-pillow
-speechrecognition
-pyttsx3
-googletrans==4.0.0-rc1
+streamlit==1.47.0
+speechrecognition==3.8.1
+pyttsx3==2.90
+googletrans==4.0.2
+pandas==2.3.1
+Pillow
 openai
-pandas
-requests
-pyaudio  # For microphone access
-sqlite3
-email_validator
+whisper==1.1.10
+torch>=2.7.1
+requests==2.31.0
+email-validator==2.2.0
+pyaudio
+gtts
