--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-streamlit==1.47.0
-speechrecognition==3.8.1
-pyttsx3==2.90
-googletrans==4.0.2
-pandas==2.3.1
-Pillow
-openai
-whisper==1.1.10
-torch>=2.7.1
-requests==2.31.0
-email-validator==2.2.0
-pyaudio
-gtts
+streamlit>=1.28.0
+sqlite3
+pillow>=9.0.0
+pandas>=1.5.0
+requests>=2.28.0
